<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">


    <TextView
        android:id="@+id/welcome1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/loginText"
        />

    <LinearLayout
        android:id="@+id/inputSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/welcome1"
        android:layout_marginTop="19dp"
        android:paddingHorizontal="42dp">


        <EditText
            android:id="@+id/uname_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/uname_logo"
            android:drawablePadding="15dp"
            android:hint="@string/username"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"
            />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/password_logo"
            android:layout_marginTop="23dp"
            android:drawablePadding="15dp"
            android:hint="@string/password"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"
            />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/inputSection2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:paddingHorizontal="49dp"
        android:layout_below="@id/inputSection">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textSize="15sp"
            android:alpha="0.7"
            android:layout_centerVertical="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lupa_password"
            android:textSize="15sp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="277dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:layout_below="@id/inputSection2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_shape"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/login_btn_txt"/>

    <RelativeLayout
        android:id="@+id/toRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp">

        <TextView
            android:id="@+id/not_have_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account_qmark"
            android:textSize="14sp"
            android:layout_marginEnd="4dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_here"
            android:textSize="14sp"
            android:layout_toEndOf="@+id/not_have_acc"
            android:textColor="@color/blue"
            />
    </RelativeLayout>
</RelativeLayout>